Fix layout issues

--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -276,7 +276,7 @@
     .box {
       display: flex;
       text-align: center;
-      align-items: center;
+      justify-content: center;
       border-left: 1px solid;
       &:first-child {
         border-left: none;
